--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+cargo_toml = "0.17.2"
 deluxe = "0.5.0"
 joinery = "3.1.0"
+once_cell = "1.19.0"
+regex = "1.10.2"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 syn = { version = "2.0.41", features = ["full"] }
