--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 anyhow = "1.0.75"
 cargo_toml = "0.17.2"
 deluxe = "0.5.0"
+env_logger = "0.10.1"
 joinery = "3.1.0"
+log = "0.4.20"
 once_cell = "1.19.0"
 regex = "1.10.2"
 serde = { version = "1.0.193", features = ["derive"] }
