--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,20 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.75"
 cargo_toml = "0.17.2"
+crates_io_api = "0.9.0"
+csv = "1.3.0"
+deflate = { version = "1.0.0", features = ["gzip"] }
 deluxe = "0.5.0"
 env_logger = "0.10.1"
+flate2 = "1.0.28"
+indicatif = "0.17.7"
+indicatif-log-bridge = "0.2.2"
 joinery = "3.1.0"
 log = "0.4.20"
 once_cell = "1.19.0"
 regex = "1.10.2"
+reqwest = { version = "0.11.23", features = ["blocking"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 syn = { version = "2.0.41", features = ["full"] }
+tar = "0.4.40"
